--- a/src/Extra.html
+++ b/src/Extra.html
@@ -41,7 +41,7 @@
                                     <div class="col-sm-5">
                                       <div class="card">
                                         <div class="card-header">
-                                            RERGISTROS POR EL MEDIO DE TRANSPORTE
+                                            REGISTROS POR EL MEDIO DE TRANSPORTE
                                         </div>
                                         <div class="card-body">
                                             <div id="graphTransport">        
@@ -89,6 +89,7 @@
                   </div>
             </div>
         </div>
+        
 <footer class="page-footer titulo"> 
     <aside class="social-sharing">
          <ul class="menu-social">
